k8s-up/kuard-config.yml
apiVersion: v1
kind: Pod
metadata:
    name: kuard-config
spec:
    containers:
        - name: test-container
          image: gcr.io/kuar-demo/kuard-amd64:blue
          imagePullPolicy: Always
          command:
            - "/kuard"
            - "$(EXTRA_PARAM)"
          volumeMounts:
            - name: config-volume
              mountPath: /config
    volumes:
        - name: config-volume
          configMap:
            name: my-config
    restartPolicy: Never
